# tof_to_can

./: .gitignore  KNOWN_ISSUES.md  tof_8x8_resolution_limits.md  tof_zone_projection_analysis.md  wiring_diagram.md
firmware/: CMakeLists.txt  build.sh  main.c
firmware/can/: can_protocol.h  can_tx.c  can_tx.h
firmware/drivers/: st_platform_common.c  st_platform_common.h
firmware/drivers/mcp25625/: mcp25625.c  mcp25625.h
firmware/drivers/tmf8828/: tmf8828_driver.c  tmf8828_driver.h
firmware/drivers/vl53l4cd/: VL53L4CD_api.c  VL53L4CD_api.h  VL53L4CD_calibration.c  VL53L4CD_calibration.h  platform.c  platform.h  vl53l4cd_driver.c  vl53l4cd_driver.h
firmware/drivers/vl53l5cx/: platform.c  platform.h  vl53l5cx_driver.c  vl53l5cx_driver.h
firmware/drivers/vl53l7cx/: platform.c  platform.h  vl53l7cx_buffers.h  vl53l7cx_driver.c  vl53l7cx_driver.h
firmware/drivers/vl53l8cx/: platform.c  platform.h  vl53l8cx_api.c  vl53l8cx_api.h  vl53l8cx_driver.c  vl53l8cx_driver.h  vl53l8cx_plugin_detection_thresholds.c  vl53l8cx_plugin_detection_thresholds.h  vl53l8cx_plugin_motion_indicator.c  vl53l8cx_plugin_motion_indicator.h  vl53l8cx_plugin_xtalk.c  vl53l8cx_plugin_xtalk.h
firmware/sensor/: sensor_manager.c  sensor_manager.h
firmware/utils/: ring_buffer.c  ring_buffer.h
host/: can_receiver.py
ros2_ws/: .gitignore
ros2_ws/src/tof_bringup/: package.xml
ros2_ws/src/tof_bringup/launch/: bringup.launch.py
ros2_ws/src/tof_can_bridge/: package.xml  setup.py
ros2_ws/src/tof_can_bridge/launch/: bringup.launch.py
ros2_ws/src/tof_can_bridge/tof_can_bridge/: bridge_node.py  can_decoder.py  zone_projection.py
ros2_ws/src/tof_to_can/: CMakeLists.txt
ros2_ws/src/tof_to_can/tof_bringup/: CMakeLists.txt
ros2_ws/src/tof_to_can/tof_bringup/config/: bridge_params.yaml  gemini330_series.yaml
ros2_ws/src/tof_to_can/tof_bringup/launch/: bringup.launch.py  gemini_330_series.launch.py
ros2_ws/src/tof_to_can/tof_bringup/rviz/: tof.rviz
ros2_ws/src/tof_to_can/tof_can_bridge/: setup.cfg  setup.py
ros2_ws/src/tof_to_can/tof_can_bridge/tof_can_bridge/: gemini_grid_node.py  zone_projection.py
ros2_ws/src/tof_to_can/tof_eval/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/tof_to_can/tof_eval/config/: eval_params.example.yaml  eval_params_gemini336.yaml  gemini336.yaml  l7cx.yaml
ros2_ws/src/tof_to_can/tof_eval/launch/: eval.launch.py
ros2_ws/src/tof_to_can/tof_eval/scripts/: aggregate_index.py  compare_sessions.py  facet_by_scene.py  pair_sensors.py
ros2_ws/src/tof_to_can/tof_eval/tof_eval/: clustering.py  eval_node.py  ground_plane.py  metrics.py  pointcloud_io.py  session_writer.py
ros2_ws/src/tof_to_can/tof_to_can/: package.xml
