<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tof_can_bridge</name>
  <version>0.1.0</version>
  <description>ToF-over-CAN → ROS2 bridge (VL53L5CX / VL53L4CD / VL53L7CX)</description>
  <maintainer email="jeongmin.choi@wattrobotics.ai">jeongmin.choi</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-can</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
