<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tof_eval</name>
  <version>0.1.0</version>
  <description>
    ToF 센서 PointCloud 평가 노드. 단일 PointCloud2 토픽을 구독해
    Gemini 336 대체 가능성 판정용 지표 (raw 품질, ground plane fit, obstacle
    detection accuracy) 를 frame/session 단위로 CSV·JSON 에 기록한다.
  </description>
  <maintainer email="jeongmin.choi@wattrobotics.ai">jeongmin.choi</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
